# astra-pro

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
.claude/: settings.local.json
.github/workflows/: ci.yml
astra_pro/: main.py  ui.py
astra_pro/agents/: __init__.py  base.py  tutor.py
astra_pro/api/: __init__.py  deps.py
astra_pro/api/v1/: __init__.py  agents.py  chat.py  knowledge.py  prompts.py  tools.py
astra_pro/config/: settings.py
astra_pro/llm/: __init__.py  client.py
astra_pro/log/: __init__.py  setup.py
astra_pro/metrics/: __init__.py  collector.py
astra_pro/prompts/: __init__.py  templates.py
astra_pro/rag/: __init__.py  chunker.py  embedder.py  knowledge_service.py  parser.py  vector_store.py
astra_pro/schemas/: __init__.py  request.py  response.py
astra_pro/tools/: __init__.py  calculator.py  knowledge_base.py
astra_pro/utils/: rate_limiter.py
tests/: test_agents.py  test_api.py  test_llm_client.py  test_rag.py
