[project]
name = "astra-pro"
version = "1.0.0"
description = "生产级 AI 代理系统 - 教培 Agent"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "tenacity>=8.0.0",
    "structlog>=23.0.0",
    "prometheus-client>=0.17.0",
    "prometheus-fastapi-instrumentator>=6.0.0",
]

[project.scripts]
astra-pro = "astra_pro.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "httpx>=0.27.0",
    "fastapi[test]>=0.100.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120